--- a/angular-4-apps/src/app/banner/banner.component.html
+++ b/angular-4-apps/src/app/banner/banner.component.html
@@ -1,25 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"> Angular App </a>
-    <button class="navbar-toggler" type="button" (click)="navbarToggler = !navbarToggler" 
-      [attr.aria-expanded]="navbarToggler ? 'true' : 'false'" aria-controls="navbarNav" 
-      aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" [class.show]="navbarToggler" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/tip">Tip Calculator</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/groceries">Grocery List</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/rps">Rock Paper Scissors</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/weather">Weather Dashboard</a>
-        </li>
-      </ul>
-    </div>
+  <button class="navbar-toggler" type="button" (click)="navbarToggler = !navbarToggler" 
+    [attr.aria-expanded]="navbarToggler ? 'true' : 'false'" aria-controls="navbarNav" 
+    aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" [class.show]="navbarToggler" id="navbarNav">
+    <ul class="navbar-nav mx-auto text-center">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/tip">Tip Calculator</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/groceries">Grocery List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/rps">Rock Paper Scissors</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/weather">Weather Dashboard</a>
+      </li>
+    </ul>
+  </div>
 </nav>
-  
