--- a/angular-4-apps/src/app/rock-paper-scissors/rock-paper-scissors.component.html
+++ b/angular-4-apps/src/app/rock-paper-scissors/rock-paper-scissors.component.html
@@ -1,1 +1,24 @@
-<p>rock-paper-scissors works!</p>
+<div class="container text-center">
+    <h1>Rock, Paper, Scissors</h1>
+    <h5>Select either rock, paper, or scissors and see if you can beat the computer!</h5>
+    <h6><b>Remember:</b> "Rock breaks scissors, scissors cut paper, paper covers rock."</h6>
+
+    <div class="row mt-5">
+        <div class="col">
+            <h3>You: {{ playerMove }}</h3>
+        </div>
+        <div class="col">
+            <h3>Computer: {{ computerMove }}</h3>
+        </div>
+    </div>
+
+    <div class="row mt-5">
+        <div class="col">
+            <button class="btn btn-primary" (click)="play('Rock')">Rock</button>
+            <button class="btn btn-primary" (click)="play('Paper')">Paper</button>
+            <button class="btn btn-primary" (click)="play('Scissors')">Scissors</button>
+        </div>
+    </div>
+
+    <h2 class="mt-5" *ngIf="result">{{ result }}</h2>
+</div>
