--- a/angular-4-apps/src/app/weather-dashboard/weather-dashboard.component.html
+++ b/angular-4-apps/src/app/weather-dashboard/weather-dashboard.component.html
@@ -1,1 +1,10 @@
-<p>weather-dashboard works!</p>
+<div class="container text-center">
+    <h1>Weather Dashboard</h1>
+    <div class="form-group">
+        <input type="text" class="form-control" id="Input" placeholder="Zip Code">
+        <label for="Input">Enter a zip code to get the current weather</label>
+    </div>
+    <div class="form-group">
+        <button type="button" class="btn btn-primary mt-3">Get Weather</button>
+    </div>
+</div>
