--- a/angular-4-apps/src/app/weather-dashboard/weather-dashboard.component.html
+++ b/angular-4-apps/src/app/weather-dashboard/weather-dashboard.component.html
@@ -1,10 +1,17 @@
 <div class="container text-center">
     <h1>Weather Dashboard</h1>
     <div class="form-group">
-        <input type="text" class="form-control" id="Input" placeholder="Zip Code">
+        <input type="text" class="form-control" id="Input" placeholder="Zip Code" [(ngModel)]="zipCode">
         <label for="Input">Enter a zip code to get the current weather</label>
     </div>
     <div class="form-group">
-        <button type="button" class="btn btn-primary mt-3">Get Weather</button>
+        <button type="button" class="btn btn-primary mt-3" (click)="getWeather()">Get Weather</button>
+    </div>
+    <hr>
+    <div *ngIf="temperature && conditions">
+        <p>City: {{ city }}</p>
+        <p>Temperature: {{ temperature | number: '1.0-0'}} °F</p>
+        <p>Humidity: {{ humidity }} </p>
+        <p>Conditions: {{ conditions }}</p>
     </div>
 </div>
