adding/testing material ui

--- a/angular-4-apps/src/app/app.component.html
+++ b/angular-4-apps/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-banner></app-banner>
-<h1 style="text-align: center; padding: 25px;"> Angular App</h1>
-<hr>
+<app-side-nav></app-side-nav>
 <router-outlet></router-outlet>
