--- a/angular-4-apps/src/app/tip-calculator/tip-calculator.component.html
+++ b/angular-4-apps/src/app/tip-calculator/tip-calculator.component.html
@@ -1,5 +1,4 @@
-<br>
-<h1 class="text-center">Tip Calculator</h1>
+<h1 class="text-center" style="font-size: 50px;">Tip Calculator</h1>
 <div class="container">
     <form>
         <div class="form-group">
@@ -12,7 +11,8 @@
         </div>
 
         <hr>
-        <h5 style="text-align: center;"> Results </h5>
+        <br>
+        <h5 style="text-align: center; font-size: 30px;"> Results </h5>
         <div class="form-group">
             <label for="tipAmount">Tip Amount:</label>
             <input type="text" class="form-control" id="tipAmount" [value]="tipAmount | currency" disabled name="tipAmount">
