--- a/angular-4-apps/src/app/tip-calculator/tip-calculator.component.css
+++ b/angular-4-apps/src/app/tip-calculator/tip-calculator.component.css
@@ -1,7 +1,84 @@
-.form-group{
-    margin: 50px;
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.text-center {
+    text-align: center;
 }
 
-label{
-    font-size: larger;
+.container {
+    width: 90vw;
+    max-width: 600px;  /* new */
+    height: auto;  /* changed */
+    margin: auto;
+    text-align: center;
+    padding-top: 0px;
+    border-radius: 15px;
+    box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.15);
+}
+
+.header {
+    padding-top: 10px;
+    font-size: 23px;
+    color: #424242;
+    text-shadow: 2px 2px 4px #BDBDBD;
+}
+
+button, .custom-tip {
+    margin: 5px;
+    margin-bottom: 15px;
+    font-size: 20px; 
+    padding: 10px; 
+    height: 60px; 
+    width: 90%;
+}
+
+@media (min-width: 480px) {
+    button, .custom-tip {
+        width: 45%;
+    }
+}
+
+@media (min-width: 600px) {
+    button, .custom-tip {
+        width: 30%;
+    }
+}
+
+mat-divider {
+    margin-bottom: 30px;
+}
+
+mat-form-field {
+    width: 100%; /* Adjust the width as you desire */
+    margin: auto; /* Center the input fields */
+}
+
+.input-field {
+    margin-bottom: -10px;
+    border-radius: 15px;
+    text-align: center; /* Center the text in input fields */
+}
+
+.input-field input {
+    border: none;
+    font-weight: 500; /* Make text a bit bolder */
+    color: #424242; /* Make text darker */
+}
+
+.input-field input:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25); /* Add a focus effect */
+}
+
+.input-field mat-label {
+    color: #757575;
+    font-weight: 500; /* Make label text a bit bolder */
+}
+
+.top-container{
+    padding-bottom: 10px;
+}
+
+.bottom-container{
+    padding-top: 0px;
+    border-radius: 15px;
 }
