--- a/angular-4-apps/src/app/tip-calculator/roulette-tip.component.css
+++ b/angular-4-apps/src/app/tip-calculator/roulette-tip.component.css
@@ -2,15 +2,12 @@
 	box-sizing:border-box;
 }
 
-body{
-	margin:0;
-	padding:0;
-	background-color: #34495e;
-	display:flex;
-	align-items:center;
-	justify-content: center;
-	height:100vh;
-	overflow:hidden;
+h1 {
+	text-align: center;
+}
+
+.wheel {
+	padding-top: 50px;
 }
 
 .container{
@@ -89,42 +86,50 @@ body{
 }
 
 #spin{
-	position: absolute;
-	top:50%;
-	left:70%;
-	transform:translate(-50%,-50%);
-	z-index:10;
-	background-color: lightgreen;
-	text-transform: uppercase;
-	border:8px solid #fff;
-	font-weight:bold;
-	font-size:20px;
-	color:#fff;
-	width: 80px;
-	height:80px;
-	font-family: sans-serif;
-	border-radius:50%;
-	cursor: pointer;
-	outline:none;
-	letter-spacing: 1px;
+    position: absolute;
+    top:70%;
+    left:70%;
+    transform:translate(-50%,-50%);
+    z-index:10;
+    background: linear-gradient(145deg, #3844b5, #22e6da);
+    text-transform: uppercase;
+    border:0;
+    font-weight:bold;
+    font-size:20px;
+    color:#fff;
+    width: 80px;
+    height:80px;
+    font-family: sans-serif;
+    border-radius:50%;
+    cursor: pointer;
+    outline:none;
+    letter-spacing: 1px;
+    box-shadow: 5px 5px 15px #223263;
+    transition: all 0.5s;
+}
+
+#spin:hover {
+    box-shadow: 0px 0px 15px #22e6da, 0px 0px 20px #22e6da, 0px 0px 25px #22e6da;
 }
 
 .power-bar {
-	width: 100%;
-	height: 20px;
-	background: #ddd;
-	border-radius: 12px;
-	margin-top: 10px;
-  }
+    width: 100%;
+    height: 20px;
+    background: #333;
+    border-radius: 12px;
+    margin-top: 10px;
+}
   
-  .power-bar-fill {
-	height: 100%;
-	background: #007bff;
-	transition: width 0.2s;
-	border-radius: 12px;
-  }
+.power-bar-fill {
+    height: 100%;
+    background: linear-gradient(145deg, #3844b5, #22e6da);
+    transition: width 0.2s;
+    border-radius: 12px;
+}
   
-  .input-fields {
+.input-fields {
 	display: grid;
 	width: 20%;
-  }
+	position: absolute;
+	top: 30%;
+}
