--- a/angular-4-apps/src/app/tip-calculator/roulette-tip.component.html
+++ b/angular-4-apps/src/app/tip-calculator/roulette-tip.component.html
@@ -1,5 +1,5 @@
-<h1 style="text-align: center;">Let's Make Dinner Even More Interesting!</h1>
 <div class="input-fields">
+	<h1>Spin To Tip!</h1>
 	<label>Total Bill</label>
 	<input [(ngModel)]="billAmount" type="number">
 	<label>My Tip</label>
@@ -9,17 +9,19 @@
 </div>
 
 <button id ="spin" (mousedown)="startSpin()" (mouseup)="stopSpin()">Spin</button>
-<span class="arrow"></span>
 
-<div #container class="container">
-	<div class="one">${{myTip}}</div>
-	<div class="two">$100</div>
-	<div class="three">100%</div>
-	<div class="four">15%</div>
-	<div class="five">18%</div>
-	<div class="six">20%</div>
-	<div class="seven">25%</div>
-	<div class="eight">30%</div>
+<div class="wheel">
+	<span class="arrow"></span>
+	<div #container class="container">
+		<div class="one">${{myTip}}</div>
+		<div class="two">$100</div>
+		<div class="three">100%</div>
+		<div class="four">15%</div>
+		<div class="five">18%</div>
+		<div class="six">20%</div>
+		<div class="seven">25%</div>
+		<div class="eight">30%</div>
+	</div>
 </div>
 
 <div class="power-bar">
