--- a/angular-4-apps/src/app/tip-calculator/roulette-tip.component.html
+++ b/angular-4-apps/src/app/tip-calculator/roulette-tip.component.html
@@ -1,29 +1,33 @@
-<div class="input-fields">
-	<h1>Spin To Tip!</h1>
-	<label>Total Bill</label>
-	<input [(ngModel)]="billAmount" type="number">
-	<label>My Tip</label>
-	<input [(ngModel)]="myTip" (ngModelChange)="setMyTip($event)" type="number">
-	<label>Final Tip</label>
-	<input [(ngModel)]="finalTip" type="number">
-</div>
-
-<button id ="spin" (mousedown)="startSpin()" (mouseup)="stopSpin()">Spin</button>
-
-<div class="wheel">
-	<span class="arrow"></span>
-	<div #container class="container">
-		<div class="one">${{myTip}}</div>
-		<div class="two">$100</div>
-		<div class="three">100%</div>
-		<div class="four">15%</div>
-		<div class="five">18%</div>
-		<div class="six">20%</div>
-		<div class="seven">25%</div>
-		<div class="eight">30%</div>
+<div class = "page-container">
+	<div class="input-fields">
+		<h1>Feeling Lucky?</h1>
+		<label>The Total Bill</label>
+		<input [(ngModel)]="billAmount" type="number">
+		<label>My Tip</label>
+		<input [(ngModel)]="myTip" (ngModelChange)="setMyTip($event)" type="number">
 	</div>
-</div>
+	<div class="result">
+		<h1>The Final Tip</h1>
+		<p>{{ finalTip | currency:'USD':true:'1.2-2' }}</p>
+	</div>
 
-<div class="power-bar">
-	<div class="power-bar-fill" [style.width.%]="power"></div>
+	<button id ="spin" (mousedown)="startSpin()" (mouseup)="stopSpin()">Spin</button>
+
+	<div class="wheel">
+		<span class="arrow"></span>
+		<div #container class="container">
+			<div class="one">${{myTip}}</div>
+			<div class="two">$100</div>
+			<div class="three">100%</div>
+			<div class="four">15%</div>
+			<div class="five">18%</div>
+			<div class="six">20%</div>
+			<div class="seven">25%</div>
+			<div class="eight">30%</div>
+		</div>
+	</div>
+
+	<div class="power-bar">
+		<div class="power-bar-fill" [style.width.%]="power"></div>
+	</div>
 </div>
