--- a/angular-4-apps/src/app/side-nav/side-nav.component.css
+++ b/angular-4-apps/src/app/side-nav/side-nav.component.css
@@ -1,8 +1,3 @@
-.sidenav-container {
-  height: 100vh;
-  width: 100%;
-}
-
 .sidenav {
   width: 250px;
   background-color: #f5f5f5; /* A light grey background color */
@@ -32,9 +27,10 @@ mat-nav-list a mat-icon {
 }
 
 mat-sidenav-content {
-  height: 100vh;
-  padding: 5%;
-  background-color: #f5f5f5; /* A light grey background color */
+  background-image: url('/assets/images/purple-background-lap.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .toolbar {
