--- a/angular-4-apps/src/app/side-nav/side-nav.component.html
+++ b/angular-4-apps/src/app/side-nav/side-nav.component.html
@@ -7,7 +7,7 @@
 
   <mat-sidenav #sidenav class="sidenav" mode="over">
     <mat-nav-list>
-      <a mat-list-item routerLink="/">
+      <a mat-list-item routerLink="/home">
         <mat-icon matListIcon>Dashboard</mat-icon>
         Home
       </a>
