--- a/angular-4-apps/src/app/tip-calculator/archived-stuff/manual-bill-split.component.css
+++ b/angular-4-apps/src/app/tip-calculator/archived-stuff/manual-bill-split.component.css
@@ -1,7 +1,7 @@
 .container {
     background-color: aquamarine;
-    padding: 10px;
-    padding-bottom: 20px;
+    height: calc(100vh - (64px + 48px));
+    padding: 1em;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 15px;
   }
