--- a/angular-4-apps/src/app/tip-calculator/roulette-tip.component.css
+++ b/angular-4-apps/src/app/tip-calculator/roulette-tip.component.css
@@ -1,11 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 *{
 	box-sizing:border-box;
 }
 
 h1 {
 	text-align: center;
+	font-family: 'Great Vibes', cursive;  /* Added Google font */
+	color: #fff;
+	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+	font-size: 3em;
+	transition: color 0.5s ease-in-out;
 }
 
+h1:hover {
+	color: #ff0000;
+}
+
+.wheel {
+	position: absolute;
+	margin: auto;
+	left: 37%;
+	animation: wheel-spin 20s infinite linear; /* Added animation */
+}
+
+.page-container {
+	height: calc(100vh - (64px + 48px));
+	background-image: url('/assets/images/casino.png');
+	background-position: center; 
+	background-repeat: no-repeat;  
+	background-size: cover;  
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.result, .input-fields {
+	position: absolute;
+	width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+	transition: transform 0.5s ease-in-out;
+}
+	
+.result:hover, .input-fields:hover {
+	transform: scale(1.05);
+}
+.result p { /* Basic styling for p tag */
+	color: #fff;
+	font-size: 1.2em;
+	text-align: center;
+}
+.result {
+	top: 300px;
+	left: 1250px;
+}
+
+.input-fields {
+	position: absolute;
+	top: 150px;
+	left: 150px;
+	width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+.result h1, .input-fields h1 {
+	margin-bottom: 20px;
+}
+
+	
+.result label, .input-fields label {
+	width: 100%;
+    margin-top: 10px;
+	color: #ccc;
+}
+
+.result input, .input-fields input {
+	width: 100%;
+	padding: 10px;
+	margin-top: 5px;
+	border: none;
+	border-radius: 5px;
+}
 .wheel {
 	padding-top: 50px;
 }
@@ -19,9 +107,10 @@ h1 {
 	position: relative;
 	overflow: hidden;
 	transition: 5s;
+	box-shadow: 0px 0px 30px rgba(0,0,0,0.2);
 }
 
-.container div{
+.container div {
 	height:50%;
 	width:200px;
 	position: absolute;
@@ -34,41 +123,40 @@ h1 {
 	justify-content: center;
 	font-size:20px;
 	font-weight:bold;
-	font-family:sans-serif;
 	color:#fff;
 	left:135px;
 }
 
 .container .one{
-	background-color: #3f51b5;
+	background-color: green; /* Red */
 	left:50%;
 }
 .container .two{
-	background-color: #ff9800;
+	background-color: #000000; /* Black */
 	transform: rotate(45deg);
 }
 .container .three{
-	background-color: #e91e63;
+	background-color: #ff0000; /* Red */
 	transform:rotate(90deg);
 }
 .container .four{
-	background-color: #4caf50;
+	background-color: #000000; /* Black */
 	transform: rotate(135deg);
 }
 .container .five{
-	background-color: #009688;
+	background-color: #ff0000; /* Red */
 	transform: rotate(180deg);
 }
 .container .six{
-	background-color: #795548;
+	background-color: #000000; /* Black */
 	transform: rotate(225deg);
 }
 .container .seven{
-	background-color: #9c27b0;
+	background-color: #ff0000; /* Red */
 	transform: rotate(270deg);
 }
 .container .eight{
-	background-color: #f44336;
+	background-color: #000000; /* Black */
 	transform: rotate(315deg);
 }
 
@@ -76,7 +164,7 @@ h1 {
 	position: absolute;
 	left:50%;
 	transform: translateX(-50%);
-	color: black;
+	color: whitesmoke;  /* Make the arrow green to represent the 0 slot */
 	z-index: 9999; /* any high number to ensure it's on top */
 }
 
@@ -85,51 +173,52 @@ h1 {
 	font-size:100px;
 }
 
-#spin{
-    position: absolute;
-    top:70%;
-    left:70%;
-    transform:translate(-50%,-50%);
-    z-index:10;
-    background: linear-gradient(145deg, #3844b5, #22e6da);
-    text-transform: uppercase;
-    border:0;
-    font-weight:bold;
-    font-size:20px;
-    color:#fff;
-    width: 80px;
-    height:80px;
-    font-family: sans-serif;
-    border-radius:50%;
-    cursor: pointer;
-    outline:none;
-    letter-spacing: 1px;
-    box-shadow: 5px 5px 15px #223263;
-    transition: all 0.5s;
+#spin {
+	position: absolute;
+	top:88%;
+	left:50%;
+	transform:translate(-50%,-50%);
+	z-index:10;
+	background: linear-gradient(145deg, #3844b5, #22e6da);
+	text-transform: uppercase;
+	border:0;
+	font-weight:bold;
+	font-size:20px;
+	color:#fff;
+	width: 80px;
+	height:80px;
+	font-family: 'Roboto', sans-serif;
+	border-radius:50%;
+	cursor: pointer;
+	outline:none;
+	letter-spacing: 1px;
+	box-shadow: 5px 5px 15px #223263;
+	transition: all 0.5s;
 }
 
 #spin:hover {
-    box-shadow: 0px 0px 15px #22e6da, 0px 0px 20px #22e6da, 0px 0px 25px #22e6da;
+	box-shadow: 0px 0px 15px #22e6da, 0px 0px 20px #22e6da, 0px 0px 25px #22e6da;
 }
-
 .power-bar {
-    width: 100%;
+position: absolute;
+	top: 72%;
+	left: 200px;
+    width: 80%;
     height: 20px;
     background: #333;
     border-radius: 12px;
+	margin: auto;
     margin-top: 10px;
 }
   
 .power-bar-fill {
-    height: 100%;
+    height: 80%;
     background: linear-gradient(145deg, #3844b5, #22e6da);
     transition: width 0.2s;
     border-radius: 12px;
 }
-  
-.input-fields {
-	display: grid;
-	width: 20%;
-	position: absolute;
-	top: 30%;
+
+@keyframes wheel-spin {
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
 }
