--- a/angular-4-apps/src/app/tip-calculator/tab-feature.component.html
+++ b/angular-4-apps/src/app/tip-calculator/tab-feature.component.html
@@ -1,6 +1,5 @@
-<mat-tab-group>
+<mat-tab-group class="tab-group">
+        <mat-tab label="Tip Roulette"> <app-roulette-tip></app-roulette-tip>  </mat-tab><mat-tab label="Let Me Help Decide Your Server's Fate"> <app-questionnaire></app-questionnaire>  </mat-tab>
     <mat-tab label="Tip Calculator"> <app-tip-calculator></app-tip-calculator> </mat-tab>
-    <mat-tab label="Tip Roulette"> <app-roulette-tip></app-roulette-tip>  </mat-tab>
-    <mat-tab label="Manual Bill Input"> <app-manual-bill-split></app-manual-bill-split>  </mat-tab>
+
 </mat-tab-group>
-  
