--- a/angular-4-apps/src/app/tip-calculator/tip-calculator.component.css
+++ b/angular-4-apps/src/app/tip-calculator/tip-calculator.component.css
@@ -7,12 +7,12 @@
 .container {
     width: 90vw;
     max-width: 600px;  /* new */
-    height: auto;  /* changed */
-    margin: auto;
+    height: calc(100vh - (64px + 48px)); 
+    padding: 1em;
     text-align: center;
-    padding-top: 0px;
     border-radius: 15px;
     box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.15);
+    background-color: aliceblue;
 }
 
 .header {
