--- a/angular-4-apps/src/app/home/home.component.html
+++ b/angular-4-apps/src/app/home/home.component.html
@@ -1,47 +1,17 @@
 <div class="container">
-  <img src="assets/images/hfg-gif.gif" alt="HFG" class="top-right-image">
-  <mat-card class="card">
-      <mat-card-header class="card-header">
-          <div mat-card-avatar class="header-icon"></div>
-          <mat-card-title>Welcome to Life's Toolbox!</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="card-content">
-          <p>
-              Ever woke up and thought, "Wow, I wish I could calculate tips, check the weather, manage my grocery list,
-              and rock a game of Rock Paper Scissors - all in one place!"? Well, buckle up, because dreams really do come true!
-          </p>
-          <mat-accordion class="accordion">
-              <mat-expansion-panel class="panel">
-                  <mat-expansion-panel-header class="panel-header">
-                      <mat-panel-title><mat-icon>monetization_on</mat-icon> Tip Calculator</mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>Don't want to carry the burden of complex math at the end of a good meal? Let our Tip Calculator do it for you!</p>
-              </mat-expansion-panel>
-
-              <mat-expansion-panel class="panel">
-                  <mat-expansion-panel-header class="panel-header">
-                      <mat-panel-title><mat-icon>wb_sunny</mat-icon> Weather Dashboard</mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>Sunshine, rain, or the occasional alien invasion - stay on top of the world's moods with our Weather Dashboard.</p>
-              </mat-expansion-panel>
-
-              <mat-expansion-panel class="panel">
-                  <mat-expansion-panel-header class="panel-header">
-                      <mat-panel-title><mat-icon>shopping_cart</mat-icon> Grocery List</mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>Don't you hate it when you forget to buy bananas... again? Our Grocery List app will make sure you never miss a thing.</p>
-              </mat-expansion-panel>
-
-              <mat-expansion-panel class="panel">
-                  <mat-expansion-panel-header class="panel-header">
-                      <mat-panel-title><mat-icon>gesture</mat-icon> Rock Paper Scissors</mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <p>Decisions are hard, let the age-old game of Rock Paper Scissors make them for you. Or just play for fun!</p>
-              </mat-expansion-panel>
-          </mat-accordion>
-      </mat-card-content>
-      <mat-card-footer class="card-footer">
-          <p>Life's Toolbox - Making daily chores a bit less daily!</p>
-      </mat-card-footer>
-  </mat-card>
+    <mat-card class="card">
+        <div class="card-header">
+            <img src="/assets/images/Hi_Five_Ghost.webp" class="header-image">
+            <mat-card-title>Welcome to DailySolutions!</mat-card-title>
+        </div>
+        <div class="card-content">
+            <p>
+                Tip calculation. Weather updates. Grocery lists. Rock-Paper-Scissors. All here.
+            </p>
+        </div>
+        <div class="card-footer">
+            <p>DailySolutions - Simplifying daily tasks or boredom, one tool at a time.</p>
+        </div>
+    </mat-card>
 </div>
+  
