--- a/angular-4-apps/src/app/rock-paper-scissors/rock-paper-scissors.component.html
+++ b/angular-4-apps/src/app/rock-paper-scissors/rock-paper-scissors.component.html
@@ -4,18 +4,22 @@
             <h1>Rock, Paper, Scissors</h1>
         </mat-card-title>
         <mat-card-subtitle>
-            <h5>Select either rock, paper, or scissors and see if you can beat the computer!</h5>
-            <h6><b>Remember:</b> "Rock breaks scissors, scissors cut paper, paper covers rock."</h6>
+            <h5>Select either rock, paper, or scissors and see if you can beat the computer! 
+                <br>
+                <b>Remember:</b> "Rock breaks scissors, scissors cut paper, paper covers rock." 
+            </h5>
         </mat-card-subtitle>
+        <img src="/assets/images/rps-regular-show.webp">
+
     </mat-card-header>
 
     <mat-card-content>
         <mat-grid-list cols="2" rowHeight="4:1">
             <mat-grid-tile>
-                <h3>You: {{ playerMove }}</h3>
+                <h3><b>You Chose:</b> {{ playerMove }}</h3>
             </mat-grid-tile>
             <mat-grid-tile>
-                <h3>Computer: {{ computerMove }}</h3>
+                <h3><b>Computer Picked:</b> {{ computerMove }}</h3>
             </mat-grid-tile>
         </mat-grid-list>
 
@@ -24,7 +28,6 @@
             <button mat-raised-button color="primary" (click)="play('Paper')">Paper</button>
             <button mat-raised-button color="primary" (click)="play('Scissors')">Scissors</button>
         </div>
-
         <h2 class="result" *ngIf="result">{{ result }}</h2>
     </mat-card-content>
 </mat-card>
