--- a/angular-4-apps/src/app/grocery-list/grocery-list.component.css
+++ b/angular-4-apps/src/app/grocery-list/grocery-list.component.css
@@ -1,5 +1,5 @@
 .container {
-    height: calc(100vh - (64px));
+    height: calc(100vh - (64px + 24px));
     max-width: 800px;
     margin: auto;
     padding: 20px;
@@ -11,4 +11,9 @@
 
 .text-center {
     text-align: center;
+}
+
+.scrollable-list {
+    max-height: 600px;
+    overflow-y: auto;
 }
