--- a/angular-4-apps/src/app/home/home.component.css
+++ b/angular-4-apps/src/app/home/home.component.css
@@ -1,64 +1,52 @@
-@keyframes bounceInDown {
-    0% { transform: translateY(-50%); opacity: 0; }
-    100% { transform: translateY(0); opacity: 1; }
-}
-
-@keyframes flipInX {
-    0% { transform: perspective(400px) rotateX(90deg); opacity: 0; }
-    100% { transform: perspective(400px) rotateX(0); opacity: 1; }
-}
-
-@keyframes fadeInUp {
-    0% { transform: translateY(50%); opacity: 0; }
-    100% { transform: translateY(0); opacity: 1; }
-}
-
-.top-right-image {
-    position: absolute;
-    top: 0;
-    right: 0;
-    /* Adjust the size as you need */
-    width: 200px;
-    height: 200px;
-}
-
 .container {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 64px); 
-    padding: 1em;
-    background-color: #f0f0f0; /* light gray */
+    height: calc(100vh - (64px));
+    background: linear-gradient(to right, #f0f0f0 0%, #ffffff 100%);
     box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
 }
 
-
-
 .card {
+    width: 60%; 
+    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.2);
     animation: bounceInDown 1s;
-    /* add your preferred styling for the card */
+    border-radius: 5px; 
+    background-color: #ffffff;
+    overflow: hidden; 
 }
 
 .card-header, .card-content, .card-footer {
-    padding: 15px;
+    padding: 20px;
+    text-align: center;
 }
 
-.header-icon {
-    /* add your preferred styling for the header-icon */
+.card-title {
+    font-size: 2em;
+    color: #333;
+    font-weight: bold;
+    padding: 1em;
+    border-bottom: 1px solid #e0e0e0;
 }
 
-.accordion .panel {
-    margin-top: 10px;
-    animation: flipInX 1s;
-    /* add your preferred styling for the panel */
+.card-content p {
+    font-size: 1.5em;
+    color: #666;
+    line-height: 1.5em;
+    margin-bottom: 2em;
+    opacity: 0.8;
 }
 
-.panel-header {
-    /* add your preferred styling for the panel-header */
+.card-footer p {
+    font-size: 1em;
+    color: #999;
+    border-top: 1px solid #e0e0e0;
+    padding: 1em;
+    font-style: italic;
 }
 
-.card-footer {
-    animation: fadeInUp 1s;
-    /* add your preferred styling for the footer */
+.header-image {
+    max-width: 100%;
+    height: 200px;
 }
